--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ header {
     left: 150px;
 }
 
-nav ul {
+/* nav ul {
     list-style: none;
     position: absolute;
     top: 50px;
@@ -63,7 +63,7 @@ nav ul li {
     display: inline-block;
     margin: 0 30px;
     font-size: larger;
-}
+} */
 
 /*Fin CSS Header*/
 
@@ -458,7 +458,7 @@ form textarea {
 
 form #enviar {
     background-color: rgb(206, 203, 203);
-    font-size 100px;
+    font-size: 100px;
     font-weight: bold;
     margin: 10px 0px 0px 110px;
 }
