--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,5 +1,5 @@
 $primary-font-weight: bold;
-$secondary-font-size: large;
+$secondary-font-size: 150%;
 $header-footer-color: #88b2cf;
 $imagen-fondo: linear-gradient(rgba(254, 254, 255, 0.8),rgba(251, 253, 253, 0.8)), url(../assets/images/muelacepillo.jpeg);
 $width-nosotros: 400px;
