--- a/scss/views/_nosotros.scss
+++ b/scss/views/_nosotros.scss
@@ -1,7 +1,6 @@
 /*----------------Inicio CSS Nosotros-----------------------------*/
 .imagen--nosotros{
     margin: 10px 0px 50px 0px;
-    width: $width-nosotros;
-    height: $height-nosotros;
+    @include sizes($width-nosotros, $height-nosotros);
 }
 /*----------------Fin CSS Nosotros--------------------------------*/
