--- a/scss/views/_servicios.scss
+++ b/scss/views/_servicios.scss
@@ -1,7 +1,6 @@
 /*-------------------Inicio CSS Servicios----------------------*/
 .imagen--servicios{
     margin: 10px 0px 50px 0px;
-    width: $width-servicios;
-    height: $height-servicios;
+    @include sizes($width-servicios, $height-servicios);
 }
 /*-------------------Fin CSS Servicios-------------------------*/
