--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,10 @@
 }
 /* --------- Fin Fuentes -----------------*/
 /*----------Inicio Tipografia--------------------*/
+html {
+  font-size: 80%;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: ComicNeue;
   font-weight: bold;
@@ -20,7 +24,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p, a, span, li, input, button, form {
   font-family: ComicNeue;
-  font-size: large;
+  font-size: 150%;
 }
 
 /*----------Fin Tipografia---------------------*/
@@ -53,14 +57,12 @@ header {
   top: 0px;
   z-index: 10;
 }
-
-#Logo1 {
+header .Logo1 {
   display: inline-block;
   width: 80px;
   height: 80px;
 }
-
-.agrandar:hover {
+header .agrandar:hover {
   font-size: x-large;
 }
 
@@ -70,19 +72,6 @@ footer {
   width: 100%;
   background-color: #88b2cf;
   padding: 20px;
-}
-
-#NombreClinicaFooter {
-  display: inline-block;
-  position: relative;
-  left: 300px;
-}
-
-#DerechosReservados {
-  display: inline-block;
-  position: relative;
-  bottom: 0px;
-  left: 600px;
 }
 
 /*---------------------Fin Footer------------------------------*/
@@ -102,7 +91,6 @@ footer {
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
   z-index: 100;
 }
-
 .btn-wsp:hover {
   text-decoration: none;
   color: #25d366;
@@ -120,16 +108,16 @@ footer {
 /*----------------Inicio CSS Nosotros-----------------------------*/
 .imagen--nosotros {
   margin: 10px 0px 50px 0px;
-  width: 400px;
   height: 300px;
+  width: 400px;
 }
 
 /*----------------Fin CSS Nosotros--------------------------------*/
 /*-------------------Inicio CSS Servicios----------------------*/
 .imagen--servicios {
   margin: 10px 0px 50px 0px;
-  width: 400px;
   height: 200px;
+  width: 400px;
 }
 
 /*-------------------Fin CSS Servicios-------------------------*/
@@ -145,6 +133,7 @@ footer {
   width: 400px;
   height: 280px;
   margin: 25px 0px 0px 0px;
+  transform: rotateZ(3deg);
 }
 
 #Blanqueamiento2 {
@@ -152,6 +141,7 @@ footer {
   width: 800px;
   height: 400px;
   margin: 25px 0px 10px 0px;
+  transform: rotateZ(-3deg);
 }
 
 /*----------------Fin CSS Blog------------------------------*/
