--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -6,15 +6,16 @@ header {
     position: sticky;
     top: 0px;
     z-index: 10;
+
+    .Logo1{
+        display: inline-block;
+        width: 80px;
+        height: 80px;
+    }
+
+    .agrandar:hover{
+        font-size:x-large;
+    }
 }
 
-#Logo1 {
-    display: inline-block;
-    width: 80px;
-    height: 80px;
-}
-
-.agrandar:hover{
-    font-size:x-large; 
-}
 /*---------------Fin Header-------------------------*/
