--- a/scss/views/_blog.scss
+++ b/scss/views/_blog.scss
@@ -10,6 +10,7 @@
     width: 400px;
     height: 280px;
     margin: 25px 0px 0px 0px;
+    transform: rotateZ(3deg);
 }
 
 #Blanqueamiento2{
@@ -17,5 +18,6 @@
     width: 800px;
     height: 400px;
     margin: 25px 0px 10px 0px;
+    transform: rotateZ(-3deg);
 }
 /*----------------Fin CSS Blog------------------------------*/
