--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -7,4 +7,8 @@
 .borde-abajo{
     border-bottom:solid;
 }
+
+.padding-superior{
+    padding: 100px 0px 0px 0px;
+}
 /*---------------Fin Clases Comunes---------------------------*/
