--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 @import "layout/header";
 @import "layout/footer";
 @import "components/buttons";
+@import "components/icons";
 @import "views/home.scss";
 @import "views/nosotros";
 @import "views/servicios";
