--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,8 +1,10 @@
 /*------------------Inicio Footer--------------------------*/
 footer {
-    width: 100%;
+    width: 115%;
     background-color: $header-footer-color;
-    padding: 20px;
+    padding: 20px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
+
 }
 
 .redes{
