--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,20 +2,21 @@
 header {
     width: 100%;
     background-color: $header-footer-color;
-    padding: 10px, 20px, 10px, 20px;
+    padding: 10px 20px 10px 20px;
     position: sticky;
     top: 0px;
     z-index: 10;
 
     .Logo1{
         display: inline-block;
-        width: 80px;
+        width: 68px;
         height: 80px;
     }
 
     .agrandar:hover{
         font-size:x-large;
     }
+
 }
 
 /*---------------Fin Header-------------------------*/
